fixed spacing between header and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,14 @@ header {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
     padding: 20px;
+    margin-bottom: 40px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h1 {
     background-color: #4aaaa5;
+    padding: 20px;
+    color: #ffffff;
 }
 
 #navleft {
@@ -57,7 +60,9 @@ h1 {
 
 footer {
     background-color: #666666;
-    font-size: 10px;
+    font-size: 14px;
     text-align: center;
     padding-top: 30px;
+    margin-top: 5%;
+    border-top: 6px solid #4aaaa5;
 }
